tests/NormalTests/paczka1/small_fuzzy/81490998.err
Error in line 1: PKOMP A361 89,4
Error in line 8: PKOMP S819 82,8
Error in line 9: PKOMP A361 78,3
